# bigsister

./: Pipfile  README.md  app.py  index.html  styles.css
chatbot-conversant/conversant/demo/: ui.py
chatbot-conversant/conversant/personas/compassionate-friend/: config.json
chatbot-routes/: .gitignore  README.md  pyproject.toml  requirements.txt
chatbot-routes/route-generation/: front_end.py  prompt.txt
static/styles/: styles.css
templates/: index.html
