[tool.poetry]
name = "route-generation"
version = "0.1.0"
description = "Dynamically create a route/intent classifier using Cohthe Cohere generate and embedding endpoints"
authors = ["stewart-co <108292383+stewart-co@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "route_generation"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.9.7 || >3.9.7,<4.0"
cohere = "^2.6.1"
numpy = "^1.23.4"
pandas = "^1.5.0"
plotly = "^5.10.0"
scikit-learn = "^1.1.2"
streamlit = "^1.13.0"
umap = "^0.1.1"
umap-learn = "^0.5.3"


[tool.poetry.group.dev.dependencies]
yapf = "^0.32.0"
toml = "^0.10.2"
flake8 = "^5.0.4"
isort = "^5.10.1"
autoflake = "^1.7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "google"
skip_glob = "**/__init__.py"
line_length = 120 
force_grid_wrap = 0 
use_parentheses = true 
multi_line_output = 0 
float_to_top = true

[tool.yapf]
based_on_style = "google"
indent_width = 4
column_limit = 120

[tool.yapfignore]
ignore_patterns = [
    ".eggs/*",
    ".git/*"
]